Update tables and continue revising offer quote

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -10,4 +10,5 @@
 % - aleasoft explicacion (https://aleasoft.com/es/gestion-eficiente-baterias-rentabilidad-proyectos-renovables/)
 % - articulos cientificos
 % - comparar situacion con estado unidos?
+% mercado marginalista
 % - ...
