--- a/references.bib
+++ b/references.bib
@@ -58,6 +58,13 @@
   year   = {2024}
 }
 
+@misc{cnmc2024mercados,
+  title  = {Resolución de 23 de mayo de 2024, de la Comisión Nacional de los Mercados y la Competencia, por la que aprueban las reglas de funcionamiento de los mercados diario e intradiario de electricidad para su adaptación a las subastas europeas intradiarias},
+  author = {Comisión Nacional de los Mercados y la Competencia},
+  url    = {https://www.boe.es/eli/es/res/2024/05/23/(12)},
+  year   = {2024}
+}
+
 @misc{cnmc2024servicios,
   title  = {Resolución de 6 de marzo de 2024, de la Comisión Nacional de los Mercados y la Competencia, por la que se modifican procedimientos de operación eléctricos para la participación de la demanda y el almacenamiento en los servicios de no frecuencia y en la solución de restricciones técnicas e integración de la hibridación de tecnologías en el proceso de programación},
   author = {Comisión Nacional de los Mercados y la Competencia},
