--- a/principal.tex
+++ b/principal.tex
@@ -87,7 +87,7 @@
 \setcounter{page}{1}
 
 \input{chapter1.tex}
-% \input{chapter2.tex}
+\input{chapter2.tex}
 \input{chapter3.tex}
 % \input{chapter4.tex}
 % \input{chapter5.tex}
