--- a/references.bib
+++ b/references.bib
@@ -43,6 +43,17 @@
   year    = {2007}
 }
 
+@article{carrasco2023battery,
+  title     = {Battery energy storage systems for the new electricity market landscape: Modeling, state diagnostics, management, and viability—A review},
+  author    = {Carrasco Ortega, Pablo and Dur{\'a}n G{\'o}mez, Pablo and M{\'e}rida S{\'a}nchez, Julio C{\'e}sar and Echevarr{\'\i}a Camarero, Fernando and Pardinas, Angel A},
+  journal   = {Energies},
+  volume    = {16},
+  number    = {17},
+  pages     = {6334},
+  year      = {2023},
+  publisher = {MDPI}
+}
+
 @misc{catl2023catl,
   title  = {CATL},
   author = {Contemporary Amperex Technology Co., Limited (CATL)},
@@ -109,6 +120,35 @@
   pages     = {2061--2069},
   year      = {2009},
   publisher = {Elsevier}
+}
+
+@article{gaspar2021optimisation,
+  title     = {Optimisation and economic feasibility of Battery Energy Storage Systems in electricity markets: The Iberian market case study},
+  author    = {Gaspar, In{\^e}s and Castro, Rui and Sousa, T{\^a}nia},
+  journal   = {Journal of Cleaner Production},
+  volume    = {324},
+  pages     = {129255},
+  year      = {2021},
+  publisher = {Elsevier}
+}
+
+@article{gissey2018market,
+  title     = {Market and regulatory barriers to electrical energy storage innovation},
+  author    = {Gissey, Giorgio Castagneto and Dodds, Paul E and Radcliffe, Jonathan},
+  journal   = {Renewable and Sustainable Energy Reviews},
+  volume    = {82},
+  pages     = {781--790},
+  year      = {2018},
+  publisher = {Elsevier}
+}
+
+@inproceedings{heredia2015economic,
+  title        = {Economic analysis of battery electric storage systems operating in electricity markets},
+  author       = {Heredia, F-Javier and Riera, Jordi and Mata, Montserrat and Escuer, Joan and Romeu, Jordi},
+  booktitle    = {2015 12th International Conference on the European Energy Market (EEM)},
+  pages        = {1--5},
+  year         = {2015},
+  organization = {IEEE}
 }
 
 @article{hu2022potential,
