--- a/chapter1.tex
+++ b/chapter1.tex
@@ -30,7 +30,7 @@ Precisamente, los \glspl{bess} son una comparativamente novedosa tecnología ene
 
 Aún y todo, no sirve con disponer únicamente de las baterías, sino que, más que nada, es justamente imprescindible controlar la carga y descarga de estos dispositivos cuidadosamente para prolongar su vida útil y asegurar el correcto funcionamiento de los mismos. Como las baterías cuentan con un \gls{capex} inicialmente considerable, pero un \gls{opex} mínimo~\cite{larsson2018cost}, lo que se busca es su rentabilidad mediante el beneficio generado a través del arbitraje de la energía almacenada en el mercado eléctrico.
 
-Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, continuamente ciclando la batería incansablemente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{omie2025instruccion}), hacen que la automatización sea una necesidad imperiosa.
+Es entonces cuando surge la necesidad de la creación de un sistema de optimización de baterías en el mercado eléctrico basado en el \gls{iiot}, el cual gestione tanto la infraestructura operacional, el entorno de mercado, la modelización estructural y el comando y control, continuamente ciclando la batería incansablemente en busca de los mejores márgenes. Aún siendo posible realizar parte de dicha gestión manualmente, la complejidad y velocidad de los mercados (teniendo en especial consideración las recientes actualizaciones~\cite{omie2025instruccion}), hacen que la automatización sea altamente relevante.
 
 De hecho, así es como nace Optibat, el sistema de optimización de baterías en el mercado eléctrico de desarrollo propio desplegado satisfactoriamente en múltiples instalaciones energéticas a lo largo del país, que mueve docenas de megavatios hora al día y genera millones de euros de ingresos previstos al año. Consigue solucionar el trabajo de ofertado manual de los agentes de mercado a través de la colaboración con los operadores de telecontrol previamente necesario para la incorporación en el mercado de las posiciones de las baterías.
 
