Add topology images

--- a/chapter3.tex
+++ b/chapter3.tex
@@ -64,11 +64,10 @@ La configuración aislada o \textit{standalone} representa el arquetipo más dir
 
 En esta topología, la batería es el único activo energético de la instalación y su principal propósito es interactuar con la red eléctrica pública de alta tensión, conectada a través del \gls{pf} a la red interna de media tensión, como se observa en la figura~\ref{fig:topologia-aislada}.
 
-% TODO
 \begin{figure}
   \centering
-  % \includegraphics[width=0.5\linewidth]{figures/topologia-aislada.png}
-  \caption{Diagrama de una instalación aislada con su activo de almacenamiento y sus correspondientes flujos energéticos}
+  \includegraphics[width=0.5\linewidth]{figures/topologia-aislada.png}
+  \caption{Diagrama de una instalación aislada con su activo de almacenamiento y sus correspondientes flujos energéticos~\cite{aleasoft2025la}}
   \label{fig:topologia-aislada}
 \end{figure}
 
@@ -103,11 +102,10 @@ Con el propósito de superar las limitaciones del modelo aislado y maximizar el 
 
 Estas topologías se definen por la llamada colocación del activo de generación, principalmente de generación renovable y generalmente fotovoltaica o eólica, con un \gls{bess}, como se muestra en la figura~\ref{fig:topologia-hibrida}.
 
-% TODO
 \begin{figure}
   \centering
-  % \includegraphics[width=0.5\linewidth]{figures/topologia-hibrida.png}
-  \caption{Diagrama de una instalación híbrida con sus activos de almacenamiento y generación y sus correspondientes flujos energéticos}
+  \includegraphics[width=0.5\linewidth]{figures/topologia-hibrida.png}
+  \caption{Diagrama de una instalación híbrida con sus activos de almacenamiento y generación (fotovoltaica) y sus correspondientes flujos energéticos~\cite{aleasoft2025la}}
   \label{fig:topologia-hibrida}
 \end{figure}
 
