--- a/references.bib
+++ b/references.bib
@@ -1,11 +1,9 @@
-@inproceedings{azahra2020optimized,
-  title        = {Optimized configuration of photovoltaic and battery energy storage system (BESS) in an isolated grid: a case study of Eastern Indonesia},
-  author       = {Azahra, A and Syahindra, KD and Aryani, DR and Jufri, FH and Ardita, IM},
-  booktitle    = {IOP Conference Series: Earth and Environmental Science},
-  volume       = {599},
-  pages        = {012017},
-  year         = {2020},
-  organization = {IOP Publishing}
+@misc{aleasoft2025la,
+  title  = {La gestión eficiente de las baterías marcará la rentabilidad de los proyectos renovables - AleaSoft Energy Forecasting},
+  author = {AleaSoft Energy Forecasting},
+  url    = {https://aleasoft.com/es/gestion-eficiente-baterias-rentabilidad-proyectos-renovables/},
+  year   = {2025},
+  note   = {Accedido: 2025-09-15}
 }
 
 @misc{aveva2025aveva,
@@ -14,6 +12,16 @@
   url    = {https://www.aveva.com/en/products/aveva-pi-system/},
   year   = {2025},
   note   = {Accedido: 2025-09-15}
+}
+
+@inproceedings{azahra2020optimized,
+  title        = {Optimized configuration of photovoltaic and battery energy storage system (BESS) in an isolated grid: a case study of Eastern Indonesia},
+  author       = {Azahra, A and Syahindra, KD and Aryani, DR and Jufri, FH and Ardita, IM},
+  booktitle    = {IOP Conference Series: Earth and Environmental Science},
+  volume       = {599},
+  pages        = {012017},
+  year         = {2020},
+  organization = {IOP Publishing}
 }
 
 @inproceedings{baviskar2023opportunities,
